[package]
name = "jlo"
version = "0.1.0"
repository = "https://github.com/sunsided/jlo"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
edition = "2024"
license = "EUPL-1.2"
publish = true

description = "A CLI tool for reading, pretty-printing, and colorizing JSON log files (NDJSON/JSON Lines), with protocol-specific formatting for Nginx and Rust tracing logs."
keywords = ["json", "logging", "cli", "pretty-print", "logs"]
categories = ["command-line-utilities", "development-tools::debugging", "parsing"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
